Fix #764204: align source url and links on the left side for RTL languages

--- a/css/print-rtl.css
+++ b/css/print-rtl.css
@@ -6,6 +6,8 @@ body {
 th {
   text-align: right;
 }
+.print-links,
+.print-source_url,
 .print-taxonomy {
   text-align: left;
 }
